Add PQ structure

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ desktop.ini
 .idea/inspectionProfiles/profiles_settings.xml
 __MACOSX/desktop.ini
 __MACOSX/public_tests_P2_Sudoku/._.DS_Store
+vcs.xml
